--- a/checkout.html
+++ b/checkout.html
@@ -44,24 +44,24 @@
                 </div>
                 <div class="header__right">
                     <div class="header__actions">
-                        <a class="header__extra" href="#"><i class="icon-chart-bars"></i><span><i>0</i></span></a>
-                        <a class="header__extra" href="#"><i class="icon-heart"></i><span><i>0</i></span></a>
+                        <a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-chart-bars"></i><span><i>0</i></span></a>
+                        <a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-heart"></i><span><i>0</i></span></a>
                         <div class="ps-cart--mini">
-                            <a class="header__extra" href=""><i class="icon-bag2"></i><span><i>0</i></span></a>
+                            <a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
                             <div class="ps-cart__content">
                                 <div class="ps-cart__items">
                                     <div class="ps-product--cart-mobile">
                                         <div class="ps-product__thumbnail">
-                                            <a href=""><img src="img/products/clothing/5.jpg" alt=""></a>
+                                            <a href="#"><img src="img/products/clothing/5.jpg" alt=""></a>
                                         </div>
-                                        <div class="ps-product__content"><a class="ps-product__remove" href=""><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
+                                        <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
                                             <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="ps-cart__footer">
                                     <h3>Sub Total:<strong>$5.99</strong></h3>
-                                    <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
+                                    <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                                 </div>
                             </div>
                         </div>
@@ -87,19 +87,19 @@
                     <ul class="navigation__extra">
                         <li><a href="seller-account.html">Sell on RMG Stock</a></li>
                         <li>
-                            <div class="ps-dropdown"><a href="">US Dollar</a>
+                            <div class="ps-dropdown"><a href="#" data-toggle="tooltip" title="This is a prototype">US Dollar</a>
                                 <ul class="ps-dropdown-menu">
-                                    <li><a href="">BD Taka</a></li>
-                                    <li><a href="">Euro</a></li>
+                                    <li><a href="#" data-toggle="tooltip" title="This is a prototype">BD Taka</a></li>
+                                    <li><a href="#" data-toggle="tooltip" title="This is a prototype">Euro</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <div class="ps-dropdown language">
-                                <a href=""><img src="img/flag/en.png" alt="">English</a>
+                                <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/flag/en.png" alt="">English</a>
                                 <ul class="ps-dropdown-menu">
                                     <li>
-                                        <a href=""><img src="img/flag/fr.png" alt=""> France</a>
+                                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/flag/fr.png" alt=""> France</a>
                                     </li>
                                 </ul>
                             </div>
@@ -118,22 +118,22 @@
             </div>
             <div class="header__right">
                 <ul class="navigation__extra">
-                    <div class="ps-dropdown"><a href="#">BD Taka</a>
+                    <div class="ps-dropdown"><a href="#" data-toggle="tooltip" title="This is a prototype">BD Taka</a>
                         <ul class="ps-dropdown-menu">
-                            <li><a href="#">Us Dollar</a></li>
-                            <li><a href="#">Euro</a></li>
+                            <li><a href="#" data-toggle="tooltip" title="This is a prototype">Us Dollar</a></li>
+                            <li><a href="#" data-toggle="tooltip" title="This is a prototype">Euro</a></li>
                         </ul>
                     </div>
                     </li>
                     <li>
                         <div class="ps-dropdown language">
-                            <a href="#"><img src="img/flag/en.png" alt="">English</a>
+                            <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/flag/en.png" alt="">English</a>
                             <ul class="ps-dropdown-menu">
                                 <li>
-                                    <a href="#"><img src="img/flag/germany.png" alt=""> Germany</a>
+                                    <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/flag/germany.png" alt=""> Germany</a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="img/flag/fr.png" alt=""> France</a>
+                                    <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/flag/fr.png" alt=""> France</a>
                                 </li>
                             </ul>
                         </div>
@@ -147,30 +147,30 @@
             </div>
             <div class="navigation__right">
                 <div class="header__actions">
-                    <div class="ps-cart--mini"><a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
+                    <div class="ps-cart--mini"><a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-bag2"></i><span><i>0</i></span></a>
                         <div class="ps-cart__content">
                             <div class="ps-cart__items">
                                 <div class="ps-product--cart-mobile">
                                     <div class="ps-product__thumbnail">
-                                        <a href="#"><img src="img/products/clothing/4.jpg" alt=""></a>
+                                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/4.jpg" alt=""></a>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Men's Sport Running Swim 
+                                    <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">Men's Sport Running Swim 
                                     Shorts</a>
                                         <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                     </div>
                                 </div>
                                 <div class="ps-product--cart-mobile">
                                     <div class="ps-product__thumbnail">
-                                        <a href="#"><img src="img/products/clothing/5.jpg" alt=""></a>
+                                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/5.jpg" alt=""></a>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Black Dip Dye Unisex T-Shirt</a>
+                                    <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">Black Dip Dye Unisex T-Shirt</a>
                                         <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="ps-cart__footer">
                                 <h3>Sub Total:<strong>$5.99</strong></h3>
-                                <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
+                                <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                             </div>
                         </div>
                     </div>
@@ -200,20 +200,21 @@
                 <div class="ps-cart__content">
                     <div class="ps-product--cart-mobile">
                         <div class="ps-product__thumbnail">
-                            <a href="#"><img src="img/products/clothing/7.jpg" alt=""></a>
+                            <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/7.jpg" alt=""></a>
                         </div>
-                        <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">MVMTH Classical Leather Watch In Black</a>
+                        <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">MVMTH Classical Leather Watch In Black</a>
                             <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
                         </div>
                     </div>
                 </div>
                 <div class="ps-cart__footer">
                     <h3>Sub Total:<strong>$5.99</strong></h3>
-                    <figure><a class="ps-btn" href="shopping-cart.html">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
+                    <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
                 </div>
             </div>
         </div>
     </div>
+
 
     <div class="ps-page--simple">
         <div class="ps-breadcrumb">
@@ -319,7 +320,7 @@
                                                 <table class="table ps-block__products">
                                                     <tbody>
                                                         <tr>
-                                                            <td><a href="#"> Sleeve Linen Blend Caro Pane Shirt ×1</a>
+                                                            <td><a href="#" data-toggle="tooltip" title="This is a prototype"> Sleeve Linen Blend Caro Pane Shirt ×1</a>
                                                             </td>
                                                             <td>$5.00</td>
                                                         </tr>
@@ -328,7 +329,7 @@
                                                 <h4 class="ps-block__title">Subtotal <span>$5.00</span></h4>
                                                 <div class="ps-block__shippings">
                                                     <figure>
-                                                        <p>Free shipping</p><a href="#"> MVMTH Classical Leather Watch In Black ×1</a>
+                                                        <p>Free shipping</p><a href="#" data-toggle="tooltip" title="This is a prototype"> MVMTH Classical Leather Watch In Black ×1</a>
                                                     </figure>
                                                 </div>
                                                 <h3>Total <span>$5.00</span></h3>
@@ -384,28 +385,28 @@
                         <h3>+88 01730442211</h3>
                         <p>BGMEA Complex, House # 7/7A, Sector # 17, Block # H-1, Uttara, Dhaka - 1230, Bangladesh. </p>
                         <ul class="ps-list--social">
-                            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a class="google-plus" href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a class="facebook" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-facebook"></i></a></li>
+                            <li><a class="twitter" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-twitter"></i></a></li>
+                            <li><a class="google-plus" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a class="instagram" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </aside>
                 <aside class="widget widget_footer">
                     <h4 class="widget-title">Quick links</h4>
                     <ul class="ps-list--link">
-                        <li><a href="#">Policy</a></li>
-                        <li><a href="#">Term & Condition</a></li>
-                        <li><a href="#">Shipping</a></li>
-                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#" data-toggle="tooltip" title="This is a prototype">Policy</a></li>
+                        <li><a href="#" data-toggle="tooltip" title="This is a prototype">Term & Condition</a></li>
+                        <li><a href="#" data-toggle="tooltip" title="This is a prototype">Shipping</a></li>
+                        <li><a href="#" data-toggle="tooltip" title="This is a prototype">FAQs</a></li>
                     </ul>
                 </aside>
                 <aside class="widget widget_footer">
                     <h4 class="widget-title">BGMEA</h4>
                     <ul class="ps-list--link">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Our Press</a></li>
+                        <li><a href="#" data-toggle="tooltip" title="This is a prototype">About Us</a></li>
+                        <li><a href="#" data-toggle="tooltip" title="This is a prototype">Contact</a></li>
+                        <li><a href="#" data-toggle="tooltip" title="This is a prototype">Our Press</a></li>
                     </ul>
                 </aside>
                 <aside class="widget widget_footer">
@@ -420,10 +421,11 @@
 
             <div class="ps-footer__copyright">
                 <p>Developed by SSL Wireless</p>
-                <a href="#"><img src="img/payment-method/footer-ssl.png" alt=""></a>
+                <a href="https://www.sslcommerz.com/"><img src="img/payment-method/footer-ssl.png" alt=""></a>
             </div>
         </div>
     </footer>
+
 
     <!-- back to top -->
     <div id="back2top"><i class="pe-7s-angle-up"></i></div>
@@ -433,7 +435,7 @@
         <div class="loader-section section-right"></div>
     </div>
     <div class="ps-search" id="site-search">
-        <a class="ps-btn--close" href="#"></a>
+        <a class="ps-btn--close" href="#" data-toggle="tooltip" title="This is a prototype"></a>
         <div class="ps-search__content">
             <form class="ps-form--primary-search" action="#" method="post">
                 <input class="form-control" type="text" placeholder="Search for...">
@@ -478,8 +480,8 @@
                                     <li> 3/4″ Dome Tweeters: 2X and 4″ Woofer: 1X</li>
                                 </ul>
                             </div>
-                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#">Add to cart</a><a class="ps-btn" href="#">Buy Now</a>
-                                <div class="ps-product__actions"><a href="#"><i class="icon-heart"></i></a><a href="#"><i class="icon-chart-bars"></i></a></div>
+                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#" data-toggle="tooltip" title="This is a prototype">Add to cart</a><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">Buy Now</a>
+                                <div class="ps-product__actions"><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-heart"></i></a><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-chart-bars"></i></a></div>
                             </div>
                         </div>
                     </div>
@@ -508,10 +510,6 @@
     <script src="js/main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxflHHc5FlDVI-J71pO7hM1QJNW1dRp4U&amp;region=GB"></script>
 
-    <script>
-        // $("a[href='\\#']").addClass('reza');
-        $("a[href='\\#']").wrap("<div class='prototype-text'></div>");
-    </script>
 </body>
 
 
