--- a/checkout.html
+++ b/checkout.html
@@ -329,7 +329,7 @@
                                                 <h4 class="ps-block__title">Subtotal <span>$5.00</span></h4>
                                                 <div class="ps-block__shippings">
                                                     <figure>
-                                                        <p>Free shipping</p><a href="#" data-toggle="tooltip" title="This is a prototype"> MVMTH Classical Leather Watch In Black ×1</a>
+                                                        <p>*Additional shipping charges will apply based on your destination</p>
                                                     </figure>
                                                 </div>
                                                 <h3>Total <span>$5.00</span></h3>
