--- a/product-default.html
+++ b/product-default.html
@@ -471,7 +471,7 @@
                 </div>
                 <div class="ps-page__right">
                     <aside class="widget widget_product widget_features">
-                        <p><i class="icon-network"></i> Shipping worldwide</p>
+                        <p><i class="icon-network"></i> Shipping worldwide. Additional shipping charges will apply based on your destination.</p>
                         <p><i class="icon-receipt"></i> Supplier give bills for this product.</p>
                         <p><i class="icon-credit-card"></i> Pay online or when receiving goods</p>
                         <p><img src="img/payment-method/ssl.png" alt=""></p>
